// Copyright 2017 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package internal.tq_tasks;

// TODO(vadimsh): These will change.

message TickLaterTask {
  string job_id = 1;
  int64 tick_nonce = 2;
}


message TriggerInvocationTask {
  string job_id = 1;
  int64 trigger_id = 2;
}


message TriageTriggersTask {
  string job_id = 1;
}


message LaunchInvocationsBatchTask {
  string job_id = 1;
  repeated int64 inv_id = 2;
}


message LaunchInvocationTask {
  string job_id = 1;
  int64 inv_id = 2;
}
